--- a/Resources/views/Cart/index.html.twig
+++ b/Resources/views/Cart/index.html.twig
@@ -33,6 +33,9 @@
                         <th>Sku</th>
                         <th>Price</th>
                         <th>Qty</th>
+                        {% if is_multi_shipping_enabled and addresses|length > 1 %}
+                        <th>Address</th>
+                        {% endif %}
                         <th>&nbsp;</th>
                     </tr>
                     </thead>
@@ -54,6 +57,15 @@
                             <td>{{ item.sku }}</td>
                             <td>{{ decorate(item.price) }}</td>
                             <td><input class="form-control" type="number" name="qty[{{ item.product_id }}]" value="{{ item.qty }}" /></td>
+                            {% if is_multi_shipping_enabled and addresses|length > 1 %}
+                            <td>
+                                <select name="product_address[{{ item.product_id }}]">
+                                {% for address in addresses %}
+                                    <option value="{{ address.value }}"{% if item.get('customer_address_id') == address.value %} selected="selected"{% endif %}>{{ address.label }}</option>
+                                {% endfor %}
+                                </select>
+                            </td>
+                            {% endif %}
                             <td class="text-center">
                                 <a class="btn btn-default" rel="nofollow" href="{{ path('cart_remove_item', { 'product_id': item.product_id }) }}">
                                     <i class="glyphicon glyphicon-remove"> </i>
@@ -64,7 +76,7 @@
                     </tbody>
                     <tfoot>
                         <tr>
-                            <td colspan="5" class="text-right">
+                            <td colspan="6" class="text-right">
                                 <input type="submit" class="btn btn-primary" value="Update" name="update" />
                             </td>
                         </tr>
@@ -72,7 +84,7 @@
                     {% else %}
                     <tbody>
                         <tr>
-                            <td colspan="5" align="center">Your Cart is Empty. <a href="{{ path('cart_products') }}">Click here to see Products</a></td>
+                            <td colspan="6" align="center">Your Cart is Empty. <a href="{{ path('cart_products') }}">Click here to see Products</a></td>
                         </tr>
                     {% endif %}
                     </tbody>
@@ -109,31 +121,55 @@
             </div>
         {% endif %}
 
-        {% if is_shipping_enabled and cartShippingMethods() | length > 0 %}
+        {% if is_shipping_enabled %}
+
             <div>
                 <form role="form" method="post" action="{{ path('cart_shipment_add') }}">
                     <table class="table table-striped table-bordered table-hover">
                         <thead>
-                            <tr>
-                                <th colspan="2">Shipping Methods</th>
-                            </tr>
+                        <tr>
+                            <th colspan="2">Shipping Methods</th>
+                        </tr>
                         </thead>
                         <tbody>
-                    {% for method in cartShippingMethods() %}
-                        <tr>
-                            <td class="text-center">
-                                <input type="radio" name="shipping_method" value="{{ method.code }}" {% if cartHasShipmentMethodCode(method.code) %}checked="checked"{% endif %} />
-                            </td>
-                            <td>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</td>
-                        </tr>
-                    {% endfor %}
+
+            {% if is_multi_shipping_enabled %}
+                {% for address_id, methods in cartShippingMethods('') %}
+
+                    <tr>
+                        <td>{{ addressLabel(address_id) }}</td>
+                        <td class="text-center">
+                            <select name="shipping_methods[{{ address_id }}]" class="form-control">
+                                {% for method in methods %}
+                                    <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                {% endfor %}
+                            </select>
+                        </td>
+                    </tr>
+
+                {% endfor %}
+            {% else %}
+
+                <tr>
+                    <td>Main Shipping Address</td>
+                    <td class="text-center">
+                        <select name="shipping_method" class="form-control">
+                            {% for method in cartShippingMethods() %}
+                                <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                            {% endfor %}
+                        </select>
+                    </td>
+                </tr>
+
+            {% endif %}
+
                         </tbody>
                         <tfoot>
-                            <tr>
-                                <td colspan="2" class="text-right">
-                                    <input type="submit" class="btn btn-primary" value="Update" name="update_shipping" />
-                                </td>
-                            </tr>
+                        <tr>
+                            <td colspan="2" class="text-right">
+                                <input type="submit" class="btn btn-primary" value="Update" name="update_shipping" />
+                            </td>
+                        </tr>
                         </tfoot>
                     </table>
                 </form>
@@ -169,8 +205,8 @@
         <pre>
             {{ cartJson() }}
         </pre>
-    </div>
-    #}
+    </div>#}
+
 
 </div>
 {% endblock %}
