--- a/Resources/views/Checkout/totals_discounts_full.html.twig
+++ b/Resources/views/Checkout/totals_discounts_full.html.twig
@@ -45,15 +45,27 @@ The Next button simply goes to the payment screen
                                             <th>Sku</th>
                                             <th>Price</th>
                                             <th>Qty</th>
+                                            {% if is_shipping_enabled and is_multi_shipping_enabled %}
+                                                <th>Address</th>
+                                            {% endif %}
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for cart_item in cart.items %}
+                                    {% for item in cart.items %}
                                         <tr>
-                                            <td>{{ cart_item.name }}</td>
-                                            <td>{{ cart_item.sku }}</td>
-                                            <td>{{ decorate(cart_item.price) }}</td>
-                                            <td><input class="form-control qty-input" type="number" name="qty[{{ cart_item.product_id }}]" value="{{ cart_item.qty }}" /></td>
+                                            <td>{{ item.name }}</td>
+                                            <td>{{ item.sku }}</td>
+                                            <td>{{ decorate(item.price) }}</td>
+                                            <td><input class="form-control qty-input" type="number" name="qty[{{ item.product_id }}]" value="{{ item.qty }}" /></td>
+                                            {% if is_shipping_enabled and is_multi_shipping_enabled and customerAddresses()|length > 1 %}
+                                                <td>
+                                                    <select name="product_address[{{ item.product_id }}]" class="form-control product-shipping">
+                                                        {% for address in customerAddresses() %}
+                                                            <option value="{{ address.id }}"{% if item.get('customer_address_id') == address.id %} selected="selected"{% endif %}>{{ address.label }}</option>
+                                                        {% endfor %}
+                                                    </select>
+                                                </td>
+                                            {% endif %}
                                         </tr>
                                     {% endfor %}
                                     </tbody>
@@ -64,25 +76,51 @@ The Next button simply goes to the payment screen
                         <div class="row">
                             <div class="col-sm-6">
 
-                            {% if is_shipping_enabled and cartShippingMethods() | length > 0 %}
-                                <table class="table table-striped table-bordered table-hover">
-                                    <thead>
+                                {% if is_shipping_enabled %}
+
+                                    <table class="table table-striped table-bordered table-hover">
+                                        <thead>
                                         <tr>
                                             <th colspan="2">Shipping Methods</th>
                                         </tr>
-                                    </thead>
-                                    <tbody>
-                                    {% for method in cartShippingMethods() %}
-                                        <tr>
-                                            <td class="text-center">
-                                                <input type="radio" name="shipping_method" value="{{ method.code }}" {% if cartHasShipmentMethodCode(method.code) %}checked="checked"{% endif %} />
-                                            </td>
-                                            <td>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                    </tbody>
-                                </table>
-                            {% endif %}
+                                        </thead>
+                                        <tbody>
+
+                                        {% if is_multi_shipping_enabled %}
+                                            {% for address_id, methods in cartShippingMethods('') %}
+
+                                                <tr>
+                                                    <td>{{ addressLabel(address_id) }}</td>
+                                                    <td class="text-center">
+                                                        <select name="shipping_methods[{{ address_id }}]" class="form-control multi-shipping">
+                                                            {% for method in methods %}
+                                                                <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code, address_id) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                                            {% endfor %}
+                                                        </select>
+                                                    </td>
+                                                </tr>
+
+                                            {% endfor %}
+                                        {% else %}
+
+                                            <tr>
+                                                <td>Main Shipping Address</td>
+                                                <td class="text-center">
+                                                    <select name="shipping_method" class="form-control">
+                                                        {% for method in cartShippingMethods() %}
+                                                            <option value="{{ method.code }}"{% if cartHasShipmentMethodCode(method.code) %} selected="selected"{% endif %}>{{ method.company }} {{ method.method }}  {{ decorate(method.price) }}</option>
+                                                        {% endfor %}
+                                                    </select>
+                                                </td>
+                                            </tr>
+
+                                        {% endif %}
+
+                                        </tbody>
+
+                                    </table>
+
+                                {% endif %}
 
                                 <div>
                                     <label>Promo Code</label>
@@ -181,41 +219,74 @@ The Next button simply goes to the payment screen
                     });
                 });
 
-                self.containerEl.on('change', 'input.qty-input', function(){
-
-                    // first gather all qty inputs, and their values
+                self.containerEl.on('change', 'select.multi-shipping', function(){
 
                     self.containerEl.find('div.totals-container .spinner').show();
 
-                    var values = {};
-                    self.containerEl.find('input.qty-input').each(function(){
-                        var qtyInput = $(this);
-                        var key = qtyInput.attr('name');
-                        var value = qtyInput.val();
-                        values[key] = value;
+                    var updateUrl = '{{ path('cart_shipment_add') }}' + '?format=json';
+
+                    var postData = {};
+                    $('select.multi-shipping').each(function(){
+                        var self = $(this);
+                        var name = self.attr('name');
+                        postData[name] = self.val();
                     });
-
-                    // update qtys
-
-                    var updateUrl = '{{ path('cart_update_qtys') }}' + '?format=json';
 
                     $.ajax({
                         url: updateUrl,
                         method: 'POST',
                         dataType: 'json',
-                        data: values
+                        data: postData
                     }).done(function(){
                         self.render();
                     });
                 });
 
+                self.containerEl.on('change', 'input.qty-input', function(){
+                    self.updateCart();
+                });
+
+                self.containerEl.on('change', 'select.product-shipping', function(){
+                    self.updateCart();
+                });
+
+            },
+            updateCart: function() {
+                var self = this;
+                // first gather all qty inputs, and their values
+
+                self.containerEl.find('div.totals-container .spinner').show();
+
+                var postData = {};
+                self.containerEl.find('input.qty-input').each(function(){
+                    var qtyInput = $(this);
+                    var key = qtyInput.attr('name');
+                    postData[key] = qtyInput.val();
+                });
+
+                $('select.product-shipping').each(function(){
+                    var self = $(this);
+                    var name = self.attr('name');
+                    postData[name] = self.val();
+                });
+
+                var updateUrl = '{{ path('cart_update_qtys') }}' + '?format=json';
+
+                $.ajax({
+                    url: updateUrl,
+                    method: 'POST',
+                    dataType: 'json',
+                    data: postData
+                }).done(function(){
+                    self.render();
+                });
             },
             render: function() {
                 var self = this;
                 $.ajax({
                     url: self.url
                 }).done(function(html){
-                    self.containerEl.find('.panel-body').html(html);
+                    self.containerEl.find('div.panel-body div.container').replaceWith(html);
                 });
 
                 return self;
