--- a/Resources/views/Checkout/payment_methods_js.html.twig
+++ b/Resources/views/Checkout/payment_methods_js.html.twig
@@ -3,6 +3,12 @@
 
     $(function() {
 
+        var selected = $('input.payment-option-input:checked').val();
+        if (typeof selected != 'undefined' && selected.length > 0) {
+            $('div.payment-option-form').hide();
+            $('div.payment-option-form.payment-' + selected).show();
+        }
+
         // handle radio inputs; show and hide sub-forms
         $('input.payment-option-input').click(function() {
             var self = $(this);
